GitBook: [master] one page modified